--- a/components/Footer/index.module.css
+++ b/components/Footer/index.module.css
@@ -1,7 +1,9 @@
 .footer {
-    position:absolute;
-    bottom:0;
-    width:100%;
-    height:60px;   /* Height of the footer */
-    background:rgb(0, 0, 0) !important;
+    height: 200px;
+    background-color: black;
+    text-align: center;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
  }
