--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,11 @@
 html,
 body {
   padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  min-height: 100vh;
+  width: 100%;
+  background-color: #2d3842 !important;
 }
 
 a {
@@ -19,8 +21,10 @@ a {
   html {
     color-scheme: dark;
   }
+
   body {
     color: white;
     background: black;
+
   }
 }
