--- a/components/Product/ProductList/index.module.css
+++ b/components/Product/ProductList/index.module.css
@@ -1,4 +1,9 @@
 .root{
-    display:flex;
-    flex-direction: column;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: center;
+    gap: 16px;
+    padding: 16px;
 }
