--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   min-height: 100vh;
   width: 100%;
-  background-color: #2d3842 !important;
+  background-color: #000000 !important;
 }
 
 a {
