--- a/components/Product/index.module.css
+++ b/components/Product/index.module.css
@@ -1,9 +1,9 @@
-.root{
+.root {
     display: flex;
     justify-content: center;
     padding: 16px;
-    width: 350px;
-    height: 400px;
+    width: 380px;
+    height: 500px;
 }
 
 .card-body {
@@ -16,7 +16,15 @@
 }
 
 .card-img-top.img-fluid {
-    width: 100%;
-    height: 10vw;
+    width: 10vw;
+    height: 10vh;
     object-fit: cover;
+
+}
+
+.p {
+    display: block;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 140px;
 }
