--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,3 +28,23 @@ a {
 
   }
 }
+
+/* width */
+p::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+p::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+p::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+p::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
